[package]
edition = "2021"
name = "distribution"
publish = false
version = "0.0.0"

[lib]
path = "src/lib.rs"
[dependencies.common_structs]
path = "../../common/common_structs"

[dependencies.factory]
path = "../factory"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
features = ["esdt-token-payment-legacy-decode"]
[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
