[package]
name = "simple-lock-whitelist"
version = "0.0.0"
authors = ["Dorin Iancu <dorin.iancu@multiversx.com>"]
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"
[dependencies.simple-lock]
path = "../simple-lock"

[dependencies.utils]
path = "../../common/modules/utils"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
features = ["esdt-token-payment-legacy-decode"]

[dependencies.multiversx-sc-modules]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"

[dev-dependencies]
num-bigint = "0.4.2"
num-traits = "0.2"
hex = "0.4"

[dev-dependencies.multiversx-sc-scenario]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
