[package]
name = "sc_whitelist_module"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"

[lib]
path = "src/sc_whitelist_module.rs"
[dependencies.common_errors]
path = "../../common_errors"

[dependencies.multiversx-sc]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
features = ["esdt-token-payment-legacy-decode"]
