[package]
name = "farm-with-locked-rewards-meta"
version = "0.0.0"
authors = ["MultiversX <contact@multiversx.com>"]
edition = "2021"
publish = false
[dependencies.farm-with-locked-rewards]
path = ".."

[dependencies.multiversx-sc-meta]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
