[package]
name = "farm-staking-proxy-meta"
version = "0.0.0"
edition = "2021"
publish = false
authors = ["MultiversX <contact@multiversx.com>"]

[dev-dependencies]
[dependencies.farm-staking-proxy]
path = ".."

[dependencies.multiversx-sc-meta]
git = "https://github.com/newtmex/mx-sdk-rs.git"
branch = "hackathon-feat"
